WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259512
AX: Crash in AXTextMarkerRange constructor when passed a null AXTextMarkerRangeRef.
https://bugs.webkit.org/show_bug.cgi?id=259512
Summary
AX: Crash in AXTextMarkerRange constructor when passed a null AXTextMarkerRan...
Andres Gonzalez
Reported
2023-07-25 17:18:56 PDT
(lldb) bt * thread #1, queue = 'com.apple.main-thread', stop reason = EXC_BREAKPOINT (code=1, subcode=0x1889503d0) * frame #0: 0x00000001889503d0 CoreFoundation`CFRelease.cold.1 + 16 frame #1: 0x00000001887745cc CoreFoundation`CFRelease + 132 frame #2: 0x000000028095486c WebCore`WebCore::AXTextMarkerRange::AXTextMarkerRange(this=0x000000016fa97650, textMarkerRangeRef=0x0000000000000000) at AXTextMarkerCocoa.mm:81:5 frame #3: 0x00000002809548dc WebCore`WebCore::AXTextMarkerRange::AXTextMarkerRange(this=0x000000016fa97650, textMarkerRangeRef=0x0000000000000000) at AXTextMarkerCocoa.mm:72:1 frame #4: 0x0000000286020cc4 WebCore`-[WebAccessibilityObjectWrapper _accessibilitySetValue:forAttribute:]::$_49::operator(this=0x0000000110252a68)() const at WebAccessibilityObjectWrapperMac.mm:2713:64 ...
Attachments
Patch
(2.98 KB, patch)
2023-07-25 17:52 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-25 17:19:06 PDT
<
rdar://problem/112870208
>
Andres Gonzalez
Comment 2
2023-07-25 17:52:25 PDT
Created
attachment 467120
[details]
Patch
EWS
Comment 3
2023-07-26 07:31:15 PDT
Committed
266313@main
(c556dfa7678b): <
https://commits.webkit.org/266313@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467120
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug