Cherry-pick 49d0fd9d61c4. rdar://problem/113605067

Cherry-pick c556dfa7678b. rdar://problem/112870208

        AX: Crash in AXTextMarkerRange constructor when passed a null AXTextMarkerRangeRef.
        https://bugs.webkit.org/show_bug.cgi?id=259512
        <rdar://problem/112870208>

        Reviewed by Chris Fleizach.

        Added null-checks in the conversion between AXTextMarkerRange objects and AXTextMarkerRangeRefs and VisiblePositionRanges.

        * Source/WebCore/accessibility/AXTextMarker.cpp:
        (WebCore::AXTextMarkerRange::operator VisiblePositionRange const):
        * Source/WebCore/accessibility/cocoa/AXTextMarkerCocoa.mm:
        (WebCore::AXTextMarker::AXTextMarker):
        (WebCore::AXTextMarkerRange::AXTextMarkerRange):

        Canonical link: https://commits.webkit.org/266313@main

Identifier: 265870.270@safari-7616-branch